# fastapi

./: .gitignore  alembic.ini  main.py  main1.py  pyproject.toml
auth/: auth.py  database.py  manager.py
migrations/: env.py
migrations/versions/: 088c64af6f24_operation.py  099b169e19ac_database_creation.py  487bfd4e6e42_change.py  715839aa9a82_change_database.py  899fd69c30c7_change.py  cedf97359dea_database_create.py  ee525087f780_create_money.py
models/: models.py
src/: config.py  database.py  main.py
src/auth/: base_config.py  manager.py  models.py  schema.py  utils.py
src/money/: models.py  router.py  schema.py
src/operation/: models.py  router.py  schema.py
src/tasks/: router.py  tasks.py
